crates/gridwell-writer-html/tests/snapshots/snapshots__raw-html.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Kind</th>
        <th class="gw__al_left">Rendered</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>bold+italic</td>
        <td>
          <b><i>rich</i></b>
        </td>
      </tr>
    </tbody>
  </table>
</div>
