crates/gridwell-writer-html/tests/snapshots/snapshots__regional-sales.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_center { text-align: center }
    .gw_table .gw__al_left { text-align: left }
    .gw_table .gw__al_right { text-align: right }
    .gw_num { text-align: right }
  </style>
  <div role="heading" aria-level="1">
    Regional Sales Performance
  </div>
  <div role="heading" aria-level="2">
    Fiscal years 2023–2024 (in millions USD)
  </div>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left"></th>
        <th class="gw__al_right"></th>
        <th class="gw__al_center" scope="colgroup" colspan="2">Financials</th>
      </tr>
      <tr>
        <th class="gw__al_left">Country</th>
        <th class="gw__al_right">Year</th>
        <th class="gw__al_right">Revenue</th>
        <th class="gw__al_right">Profit</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td colspan="4">
          North America
        </td>
      </tr>
      <tr>
        <td rowspan="2">United States</td>
        <td class="gw__al_right">2023</td>
        <td class="gw__al_right">1,250.3</td>
        <td class="gw__al_right">
          270.1<sup><a href="#fn1">1</a></sup>
        </td>
      </tr>
      <tr>
        <td class="gw__al_right">2024</td>
        <td class="gw__al_right">1,380.7</td>
        <td class="gw__al_right">330.3</td>
      </tr>
      <tr>
        <td>Canada</td>
        <td class="gw__al_right">2024</td>
        <td class="gw__al_right">420.1</td>
        <td class="gw__al_right">109.5</td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <td colspan="4">
          Europe
        </td>
      </tr>
      <tr>
        <td>Germany</td>
        <td class="gw__al_right">2024</td>
        <td class="gw__al_right">945.2</td>
        <td class="gw__al_right">164.9</td>
      </tr>
      <tr>
        <td>France</td>
        <td class="gw__al_right">2024</td>
        <td class="gw__al_right">610.8</td>
        <td class="gw__al_right">120.6</td>
      </tr>
    </tbody>
  </table>
  <div class="gw_footer">
    <div class="gw_footnotes">
      <p id="fn1" >
        <sup>1</sup> Includes one-time restructuring charge.
      </p>
    </div>
    <div class="gw_source_notes">
      <p>
        Source: Internal finance database, June 2026.
      </p>
    </div>
  </div>
</div>
