crates/gridwell-writer-html/tests/snapshots/snapshots__single-stub.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
    .gw_table .gw__al_right { text-align: right }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Region</th>
        <th class="gw__al_right">Sales</th>
        <th class="gw__al_right">Growth</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>East</td>
        <td class="gw__al_right">120</td>
        <td class="gw__al_right">4%</td>
      </tr>
      <tr>
        <td>West</td>
        <td class="gw__al_right">98</td>
        <td class="gw__al_right">2%</td>
      </tr>
    </tbody>
  </table>
</div>
