crates/gridwell-writer-html/tests/snapshots/snapshots__snapshot_empty_body.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: "render(\"minimal/empty_body.json\")"
---
<div class="gw_container">
  <table class="gw_table">
    <thead>
      <tr>
        <th scope="col">Name</th>
        <th scope="col">Age</th>
        <th scope="col">City</th>
      </tr>
    </thead>
  </table>
</div>
